Fix white-space overflow in some divs

--- a/src/chatApp/contentView/ConversationViewBanner.css
+++ b/src/chatApp/contentView/ConversationViewBanner.css
@@ -6,5 +6,6 @@
   font-size: 20px;
   padding: 15px;
   overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
 }
