--- a/src/chatApp/contentView/MessageView.css
+++ b/src/chatApp/contentView/MessageView.css
@@ -8,7 +8,7 @@
   border-radius: 15px;
   max-width: 75%;
   line-height: 1.4;
-  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 .MessageView--us_synced, .MessageView--us_unsynced {
