--- a/src/chatApp/sidebar/SidebarBanner.css
+++ b/src/chatApp/sidebar/SidebarBanner.css
@@ -13,6 +13,7 @@
 .SidebarBanner__userName {
   flex: 1 0;
   overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
 }
 
